--- a/css/styles.css
+++ b/css/styles.css
@@ -1,60 +1,40 @@
-@charset "utf-8";
-
-html {
-	box-sizing: border-box;
-  }
-*, *:before, *:after {
-	box-sizing: inherit;
-}
-
 body {
-	font-family: sans-serif;
-	font-size: 150%;
-	line-height: 1.4;
-	width: 80%;
-	margin: 0 auto;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 2.1;
 }
 
-/* header styles */
-
-h1 {
-  font-size: 3rem;
-  text-align: center;
+header {
+    background: #b65353;
+    color: #fff;
+    padding: 1rem 0;
+    text-align: center;
 }
 
-header p {
-  font-size: 1.3rem;
-  font-weight: bold;
-  text-align: center;
+header h1 {
+    margin: 0;
 }
 
-/* section styles */
 section {
-	display: flex;
-	justify-content: center;
-	margin-bottom: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    padding: 25px;
+    justify-content: center;
 }
-section article {
-	border: 1px solid black;
-	box-shadow: 0 2px 14px grey;
-	padding: 2.5%;
-	width: 25%;
-	margin: 0 1%;
+
+article {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+    text-align: center;
+    width: 200px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 article img {
-	display: block;
-	height: 150px;
-	width: 90px;
-}
-section p {
-  margin: 5px 0;
-}
-
-section ul {
-  margin-top: 0;
-}
-
-h2 {
-  font-size: 2.5rem;
-  margin-bottom: 10px;
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
 }
